--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.67.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
+    "sift": "^17.1.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
