--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
     "env-cmd": "^11.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
+    "react": "19.2.1",
     "react-apexcharts": "^1.9.0",
     "react-day-picker": "^9.11.3",
-    "react-dom": "19.2.0",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.67.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
@@ -68,13 +68,17 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.0.6",
+    "eslint-config-next": "16.0.7",
     "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
